<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="lAuthViewModel"
            type="com.shakib.digitalcom.viewmodel.AuthViewModel"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="#EAF1A6"
        tools:context=".view.LoginActivity">

        <TextView
            android:id="@+id/txt_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="28sp"
            android:textColor="#472F2F"
            android:typeface="sans"
            android:textStyle="italic|bold"
            android:text="@string/login_title"
            android:layout_marginTop="100dp"
            android:layout_marginStart="16dp"
            android:transitionName="title_text"/>

        <TextView
            android:id="@+id/txt_sub_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="16sp"
            android:textColor="#472F2F"
            android:typeface="sans"
            android:textStyle="italic"
            android:text="@string/login_text"
            android:layout_marginStart="16dp"
            android:transitionName="sub_title_text"/>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/field_mobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginVertical="8dp"
            android:layout_marginHorizontal="16dp"
            android:transitionName="mobile_field"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_mobile"
                android:text="@={lAuthViewModel.phoneNumber}"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionDone"
                android:inputType="phone"
                android:maxLength="11"
                android:hint="@string/mobile"
                android:singleLine="true"/>
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txt_otp_caution"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="#472F2F"
            android:typeface="sans"
            android:textStyle="italic"
            android:text="@string/otp"
            android:textAlignment="center"
            android:layout_marginHorizontal="16dp"
            android:transitionName="otp_text"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_send_otp"
            android:onClick="@{() -> lAuthViewModel.onSendOtpButtonClick()}"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:text="@string/otp_button"
            android:layout_marginHorizontal="50dp"
            android:transitionName="otp_btn"/>

        <TextView
            android:id="@+id/txt_sign_up"
            android:onClick="@{() -> lAuthViewModel.onNewUserClick()}"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:foreground="?android:attr/selectableItemBackground"
            android:textSize="16sp"
            android:textColor="#472F2F"
            android:typeface="sans"
            android:textStyle="italic"
            android:text="@string/new_user"
            android:layout_marginStart="16dp"
            android:gravity="center"
            tools:targetApi="m"
            tools:ignore="UnusedAttribute" />

        <ProgressBar
            android:id="@+id/progress_bar_l"
            android:visibility="gone"
            android:layout_marginVertical="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</layout>